# pico_piano

./: CMakeLists.txt  LICENSE  README.md  ble_client_manager.cpp  ble_client_manager.h  ble_midi.cpp  ble_midi.h  bt.gatt  btstack_config.h  debug.h  main.cpp  midi.cpp  midi.h  simple_serialize.pio  spinlock.h
audio/: audio.cpp  audio.h
pm_piano/: filter.h  fixed.h  hammer.h  note.cpp  note.h  note_manager.cpp  note_manager.h  piano.cpp  piano.h  soundboard.cpp  soundboard.h  string.h  sys_params.h
